testsuite/poke.pkl/cond-exp-diag-2.pk
/* { dg-do compile } */

var i = 1 ? "foo" : [1,2,3]; /* { dg-error "wrong type\n.*string" } */
